Spacing fix

--- a/style.css
+++ b/style.css
@@ -7,13 +7,19 @@ header {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	gap: 0px;
-	padding: 0px;
 }
+
+header {
+	
+}
+
 
 h1 {
 	font-family: arial, sans-serif;
-	}
+	padding: 0px;
+}
+
+
 @media only screen and (max-width: 768px) {
 	h1 {
 		font-size: 24px;
